created edit profile , change password and view reviews pages

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -60,6 +60,7 @@ button,
 input,
 textarea,
 span,
+li,
 input::placeholder {
   color: var(--foreground);
   font-family: "Lexend", sans-serif !important; /* Apply Lexend font */
