created add listing page but api not working

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -58,7 +58,10 @@ input,
 textarea,
 span,
 li,
-input::placeholder {
+input::placeholder,
+legend,
+fieldset,
+label {
   color: var(--foreground);
   font-family: "Lexend", sans-serif !important; /* Apply Lexend font */
 }
