fixed errors identified by nishaat and made homepage mobile responsive

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -111,3 +111,12 @@ body::-webkit-scrollbar-thumb {
   border: none !important ;
   outline: none !important ;
 }
+
+/* You can put this in your global CSS or inside a <style jsx global> tag */
+.slick-dots li button:before {
+  color: white !important; /* Make inactive dots white */
+}
+
+.slick-dots li.slick-active button:before {
+  color: #ffffff !important; /* Make active dot white as well */
+}
