--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -121,3 +121,18 @@ body::-webkit-scrollbar-thumb {
 .slick-dots li.slick-active button:before {
   color: #ffffff !important; /* Make active dot white as well */
 }
+
+.gm-style-iw {
+  padding: 0 !important;
+}
+
+.gm-style-iw-chr {
+  display: none !important;
+}
+.gm-style-iw-d {
+  overflow: hidden !important;
+}
+
+.gm-style .gm-style-iw-tc::after {
+  background: rebeccapurple;
+}
