--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -232,3 +232,77 @@ body::-webkit-scrollbar-thumb {
   cursor: default;
   background-color: #fff;
 }
+
+/* globals.css */
+.Toastify__toast-container {
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: auto;
+  max-width: 95%;
+  z-index: 9999;
+  /* Add a blurred background overlay */
+}
+.Toastify__toast-container::before {
+  content: "";
+  position: fixed;
+  inset: 0;
+  z-index: -1;
+  backdrop-filter: blur(8px);
+  background: rgba(32, 12, 39, 0.4); /* fallback color */
+  pointer-events: none;
+}
+.Toastify__progress-bar--wrp {
+  display: none !important;
+}
+
+.Toastify__toast {
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  font-size: 1.5rem;
+  border-radius: 16px;
+  padding: 2rem 2.5rem;
+  min-width: 550px;
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.18);
+  letter-spacing: 0.02em;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+.Toastify__toast-body {
+  font-size: 1.3em;
+  font-weight: 700;
+  color: inherit;
+}
+
+.Toastify__toast--success {
+  background-color: #d1f7c4;
+  color: #1e4620;
+}
+
+.Toastify__toast--error {
+  background-color: #fddede;
+  color: #911212;
+}
+
+.Toastify__toast--warning {
+  background-color: #fff4e5;
+  color: #613202;
+}
+
+.Toastify__toast--info {
+  background-color: #d0f0fd;
+  color: #034b75;
+}
+
+.Toastify__toast-icon {
+  width: 3rem;
+}
+
+.Toastify__close-button > svg {
+  fill: white;
+  height: 26px;
+  width: 30px;
+}
