--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -281,9 +281,11 @@ body::-webkit-scrollbar-thumb {
 }
 
 .Toastify__toast--info,
-.Toastify__toast-theme--colored.Toastify__toast--info {
+.Toastify__toast-theme--colored.Toastify__toast--info,
+#loading-toast {
   background-color: #3c285a;
   color: white;
+  padding: 20px 30px;
 }
 
 .Toastify__toast-icon {
