--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -265,7 +265,8 @@ body::-webkit-scrollbar-thumb {
   color: inherit;
 }
 
-.Toastify__toast--success {
+.Toastify__toast--success,
+.Toastify__toast-theme--colored.Toastify__toast--success {
   background: linear-gradient(148.71deg, #200c27 2.12%, #6d3880 98.73%);
   color: white;
 }
