--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -165,25 +165,20 @@ body::-webkit-scrollbar-thumb {
 /* Style the dropdown container */
 .pac-container {
   z-index: 9999 !important;
-  border-radius: 10px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  background-color: white;
-  font-family: "Inter", sans-serif;
-  font-size: 14px;
-  padding: 5px;
-}
-
-.pac-container {
-  background-color: #fff;
-  z-index: 1000;
-  border-radius: 2px;
-  font-size: 11px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px !important;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2) !important;
+  background-color: rgba(22, 12, 24, 1) !important;
+  font-family: "Inter", sans-serif !important;
+  font-size: 14px !important;
+  padding: 0 !important;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   overflow: hidden;
   width: 350px;
+  color: white !important;
+  border: none !important;
+  margin-top: 10px !important;
 }
 
 .pac-icon {
@@ -202,24 +197,24 @@ body::-webkit-scrollbar-thumb {
 }
 
 .pac-item {
-  cursor: pointer;
-  padding: 0 4px;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-  line-height: 30px;
-  vertical-align: middle;
-  text-align: left;
-  border-top: 1px solid #e6e6e6;
-  color: #999;
+  cursor: pointer !important;
+  padding: 0 4px !important;
+  text-overflow: ellipsis !important;
+  overflow: hidden !important;
+  white-space: nowrap !important;
+  line-height: 30px !important;
+  vertical-align: middle !important;
+  text-align: left !important;
+  border-top: none !important;
+  color: white !important;
 }
 
 .pac-item.custom {
-  background-color: #fff9c4;
+  background: rebeccapurple;
 }
 
 .pac-item:hover {
-  background-color: #efefef;
+  background: rebeccapurple;
 }
 
 .pac-item-error,
@@ -227,7 +222,7 @@ body::-webkit-scrollbar-thumb {
   color: #aaa;
   padding: 0 5px;
   cursor: default;
-  background-color: #fff;
+  background-color: #3c0272;
 }
 
 /* globals.css */
