--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -146,6 +146,7 @@ body::-webkit-scrollbar-thumb {
   padding: 10px 15px;
   border-bottom: 1px solid #eee;
   cursor: pointer;
+  overflow-x: hidden;
 }
 
 /* On hover */
